<resources>
    <string name="app_name">Hawker C</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Start</string>
    <string name="setup">Setup</string>
    <string name="confirm">Confirm</string>
    <string name="table_no">Table No</string>
    <string name="select_store">Select Store</string>

    <string name="message_login">You are not currently signed in to any store.</string>

    <string name="hint_store">Which store are you eating at?</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="label_total">Total:</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="error_table">Please enter your table number.</string>
    <string name="error_place">Please select a store.</string>
    <string name="loading">Loading...</string>
    <string name="place_order">Place Order</string>
    <string name="message_order">How many would you like to order?</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="message_cancel_order">Do you want to cancel your order?</string>
    <string name="cancel_it">Cancel It</string>
    <string name="back">Back</string>
    <string name="eta">ETA</string>
    <string name="channel_name">Hawker Orders</string>
    <string name="channel_description">Updates to the orders in the Hawker App</string>
</resources>