<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".OrdersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:background="@drawable/seperator"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/header_eta"/>

        <TextView
            android:id="@+id/header_eta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eta"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_item"
            app:layout_constraintRight_toLeftOf="@id/header_qty"/>

        <TextView
            android:id="@+id/header_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_eta"
            app:layout_constraintRight_toLeftOf="@id/header_price"/>

        <TextView
            android:id="@+id/header_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_qty"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/seperator"
        app:layout_constraintTop_toBottomOf="@id/headers"
        app:layout_constraintBottom_toTopOf="@id/label_total"
        tools:listitem="@layout/row_order"/>

    <TextView
        android:id="@+id/label_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/label_total"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:gravity="end"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/recycler_view"
        app:layout_constraintRight_toLeftOf="@id/total"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/label_total"
        app:layout_constraintBottom_toBottomOf="@id/label_total"
        app:layout_constraintLeft_toRightOf="@id/label_total"
        app:layout_constraintRight_toRightOf="@id/recycler_view"
        tools:text="RM55.00"/>

</androidx.constraintlayout.widget.ConstraintLayout>