<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_layout_store"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_store"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/label_table"
            app:startIconDrawable="@drawable/ic_baseline_add_location"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_no"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_store"
            app:layout_constraintBottom_toTopOf="@id/text_layout_table"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="72dp"
            app:layout_constraintTop_toBottomOf="@id/label_table"
            app:layout_constraintBottom_toTopOf="@id/button_confirm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_table"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>